# CygnusAI

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
cygnus_ai/: __init__.py  algorithm.py  api.py  config.py  processor.py  registry.py
cygnus_ai/models/: __init__.py  face_detection.py  registry.py  yolo_fire.py  yolo_human.py
examples/: config.ini  cygnus_app.py
